app/components/CoursesSection/styles.module.scss
.courses {
  width: 100%;
  max-width: 2000px;
  min-height: 100vh;

  padding: 13.25rem;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: space-between;
  gap: 6.5rem;

  .coursesHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .coursesTitle {
    display: flex;
    flex-direction: column;
    justify-content: start;
    gap: 0.2rem;

    .coursesTitleText {
      font-size: 5.75rem;
      font-weight: 400;
      color: #fff;
      margin-left: -0.5rem;
    }

    .coursesTitleSubtext {
      font-size: 1.375rem;
      font-weight: 300;
      color: var(--primary);
    }
  }

  .categoriesList {
    display: flex;
    gap: 6.125rem;

    .category {
      background: none;
      border: none;
      box-shadow: none;
      color: #888;
      font-size: 1.0625rem;
      font-weight: 400;
      cursor: pointer;
      position: relative;
      padding: 0;
      transition: color 0.2s;
      outline: none;

      &:hover,
      &:focus {
        color: #fff;
        font-weight: 600;
      }

      &::before {
        content: "";
        display: block;
        position: absolute;
        top: -0.8rem;
        left: 0;
        width: 0;
        height: 5px;
        background: var(--primary);
        border-radius: 1px;
        transition: width 0.3s cubic-bezier(0.65, 0, 0.35, 1);
      }
    }

    .selected {
      color: #fff;
      font-weight: 600;

      &::before {
        width: 40%;
      }
    }
  }

  .categoryTitle {
    font-size: 3.4375rem;
    font-weight: 500;
    color: #fff;
  }

  .coursesList {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    list-style: none;
    margin-left: 0.25rem;
    width: 50%;

    .course {
      font-size: 1.375rem;
      font-weight: 300;
      color: var(--text);
      padding-bottom: 1rem;
      border-bottom: 1px solid var(--text);
      transition: color 0.3s ease, border-bottom 0.3s ease;

      &:hover {
        color: var(--primary);
        border-bottom: 1px solid var(--primary);

        .courseMode {
          color: var(--primary);
        }
      }

      .courseMode {
        font-size: 0.8125rem;
        font-weight: 300;
        color: var(--text);
        margin-left: 1rem;
        transition: color 0.3s ease;
      }
    }
  }

  .coursesListMobile {
    display: none;
    flex-direction: column;
    gap: 1.25rem;
    width: 100%;

    .categoryBlock {
      border-bottom: 1px solid #333;
      padding-bottom: 1.5rem;
    }

    .categoryHeader {
      display: flex;
      align-items: center;
      justify-content: space-between;
    }

    .categoryTitleMobile {
      font-size: 2rem;
      font-weight: 500;
      color: #fff;
      text-transform: uppercase;
    }

    .toggleButton {
      width: 3.7319rem;
      height: 3.7319rem;
      border-radius: 50%;
      border: 1px solid var(--primary);
      background: transparent;
      color: transparent;
      font-size: 2.5rem;
      font-weight: 500;
      display: flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;
      transition: border-color 0.2s;
      outline: none;
      box-shadow: none;
      padding: 0;

      .icon {
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 100%;
      }

      .plus,
      .minus {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        transition: opacity 0.3s ease, transform 0.3s ease;
      }

      .plus {
        opacity: 1;
        -webkit-text-stroke: 1px var(--primary);
      }

      .minus {
        opacity: 0;
      }

      @media (max-width: 320px) {
        .minus {
          top: 50%;
          left: 50%;
        }
      }
    }

    .toggleButton:active {
      background: var(--primary);
      color: #000;
      border-color: var(--primary);
    }

    .toggleButton[aria-expanded="true"] {
      background: var(--primary);
      color: #000;
      border-color: var(--primary);
      font-weight: 900;
      font-size: 30px;

      .plus {
        opacity: 0;
      }

      .minus {
        opacity: 1;
        color: #000;
      }
    }

    .coursesListMobile {
      margin-top: 1rem;
      display: flex;
      flex-direction: column;
      gap: 1.25rem;
      max-height: 0;
      overflow: hidden;
      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
      opacity: 0;
      transform: translateY(-10px);

      &[aria-expanded="true"] {
        max-height: 1000px;
        opacity: 1;
        transform: translateY(0);
      }
    }

    .courseMobile {
      display: flex;
      flex-direction: column;
      gap: 0.25rem;
      color: #fff;
      border-top: 1px solid #444;
      padding-top: 1.0769rem;
      font-size: 1.125rem;
      font-weight: 400;
    }

    .courseModeMobile {
      font-size: 0.625rem;
      color: #8a959b;
      font-weight: 600;
      text-transform: uppercase;
    }
  }
}

@media (max-width: 1280px) {
  .courses {
    padding: 2rem;
    gap: 3.4838rem;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    min-height: fit-content;

    .coursesHeader {
      height: 100%;
      flex-direction: column;
      gap: 2.2806rem;
    }

    .coursesTitle {
      width: 100%;
      height: 100%;
      gap: 2.3438rem;

      .coursesTitleText {
        font-size: 3.875rem;
      }

      .coursesTitleSubtext {
        font-size: 1.375rem;
      }
    }

    .categoriesList {
      display: none;
    }

    .categoryTitle {
      display: none;
    }

    .coursesList {
      display: none;
    }

    .coursesListMobile {
      display: flex;
    }
  }
}

@media (min-width: 2560px) {
  .courses {
    max-width: 100%;
  }
}

